# RNAS

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  state.md
.github/workflows/: ci.yml
cmd/rnas-config/: rnas_config.py
cmd/rnas-dict/: dictionary.py
configs/: README.md  accel-ppp-rnas-vm1.conf  hotspot.conf  ipoe.conf  l2tp.conf  monitor.conf  pppoe.conf  pptp.conf  sstp.conf
configs/access.d/: ip-pool.conf  ipoe.conf  (+5 more)
docker/: Dockerfile  Dockerfile.accel-ppp  Dockerfile.freeradius  docker-compose.yml
docs/: API.md  PROTOCOLS.md  ROADMAP-v3.md
luci-app-rnas/: CMakeLists.txt  Makefile  README.md
luci-app-rnas/luasrc/controller/: rnas.lua
luci-app-rnas/luasrc/i18n/: rnas.zh-cn.lua
luci-app-rnas/luasrc/model/cbi/rnas/: coa.lua  ip_pool.lua  overview.lua  protocol.lua  radius.lua  sessions.lua  status.lua
luci-app-rnas/luasrc/view/rnas/: coa_log.htm  ip_pool_help.htm  sessions_table.htm  status_connections.htm  status_general.htm  status_overview.htm
luci-app-rnas/root/etc/: accel-ppp.conf
luci-app-rnas/root/etc/config/: rnas
luci-app-rnas/root/etc/init.d/: accel-ppp-rnas
luci-app-rnas/root/etc/uci-defaults/: luci-rnas
luci-app-rnas/root/usr/share/luci/menu.d/: luci-app-rnas.json
scripts/: install.sh  post-boot-verify.sh  rnas-dhcp-relay.py  rnas-lac-init.sh  rnas-qosd.py
systemd/: rnas-accel-ppp.service  rnas-dnsmasq.service  rnas-firewall.service  rnas.target
tests/: run-all-tests.sh
tools/: acct-verify.sh  coa-test.sh  pppoe-test.sh  radius-capture.sh  rnas-bwtest.py  rnas-capture.py  session-monitor.sh
web/: server.py
(+77 files in other folders)
